--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>RFSL</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700|Roboto:300,400,500,700&amp;subset=latin-ext"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    
+
 </head>
+
 <body>
-<h1>Npm install</h1>
+    <!-- Navigation -->
+    <nav class="navbar  navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">RFSL LOGO</a>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="icon-bar top-bar"></span>
+                <span class="icon-bar middle-bar"></span>
+                <span class="icon-bar bottom-bar"></span>
+                <span class="sr-only">Toggle navigation</span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Hem
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Vad gör vi?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Engagera dig</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Utbildning</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Hälsa & stöd</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Om Oss</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Kontakt</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <!-- HEADER -->
+    <header class="header-wrapper">
+        <div class="header-1 img-fluid">
+            <img src="img/header1.jpeg" alt="header 1">
+            <div class="header-content">
+                    <h1>This is headline</h1>
+                    <p>Guest it he tears aware as. Make my no cold of need. He been past in by my hard. Warmly thrown oh he common future. Otherwise concealed favourite frankness on be at dashwoods defective at. Sympathize interested simplicity at do projecting increasing terminated. As edward settle limits at in. </p>
+                    <a class="btn" href="btn">Read More</a>
+            </div>
+        </div>
+        <div class="header-2 img-fluid">
+            <img src="img/header2.jpeg" alt="header 2">
+            <div class="header-content">
+                    <h1>Another headline</h1>
+                    <p>By impossible of in difficulty discovered celebrated ye. Justice joy manners boy met resolve produce. Bed head loud next plan rent had easy add him.</p>
+                    <a class="btn" href="#">Read More</a>
+            </div>
+        </div>
+    </header>
 
 
 
-<script src="js/script.js"></script>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 
 </body>
+
 </html>
