--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,22 @@
     <title>RFSL</title>
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700|Roboto:300,400,500,700&amp;subset=latin-ext"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
     <!-- Navigation -->
-    <nav class="navbar  navbar-dark">
+    <nav class="navbar navbar-dark">
+            <div class="right-wrapper">
+                <a href="#"><i class="fas fa-circle"></i>Kontakt</a>
+                <a href="#"><i class="fas fa-circle"></i>Lättläst</a>
+                <a href="#"><i class="fas fa-circle"></i>Språk</a>
+                </div>
         <div class="container">
-            <a class="navbar-brand" href="#">RFSL LOGO</a>
+            <a class="navbar-brand" href="#"><img src="img/BI_dark_background_white_vertical.png" alt="" class="img-fluid"></a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="icon-bar top-bar"></span>
@@ -25,28 +32,61 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Hem
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Vad gör vi?</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Engagera dig</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Utbildning</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Hälsa & stöd</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Om Oss</a>
+                        <ul class="submenu">
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Om RFSL
+                                    Stockholm</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Styrdokument</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Styrelse</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Personal</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Jobba
+                                    hos oss</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Kontakt</a>
+                        <a class="nav-link bold" href="#">Verksamhet/Vi gör</a>
+                        <ul class="submenu">
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Mötesplatser</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Information/material</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Projekt</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link bold" href="#">Medlem</a>
+                        <ul class="submenu">
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Medlemsgrupper</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Fester</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Nyhetsbrev</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Bli
+                                    medlem</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link bold" href="#">Volontär</a>
+                        <ul class="submenu">
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Bli
+                                    volontär</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Volontärutbildning</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Volontäruppdrag</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link bold" href="#">Utbildning</a>
+                        <ul class="submenu">
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Utbildningspaket</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Priser</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link bold" href="#">Hälsa</a>
+                        <ul class="submenu">
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Migrantkonsulent</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Röda
+                                    paraplyt</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Sexperterna</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-angle-right"></i>Testpoint</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -57,22 +97,124 @@
     <!-- HEADER -->
     <header class="header-wrapper">
         <div class="header-1 img-fluid">
-            <img src="img/header1.jpeg" alt="header 1">
+            <img src="https://images.unsplash.com/photo-1533551223731-024de510ab2c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f7fc7047cd521d14d64151858cba46bf&auto=format&fit=crop&w=1780&q=80" alt="header 1">
             <div class="header-content">
-                    <h1>This is headline</h1>
-                    <p>Guest it he tears aware as. Make my no cold of need. He been past in by my hard. Warmly thrown oh he common future. Otherwise concealed favourite frankness on be at dashwoods defective at. Sympathize interested simplicity at do projecting increasing terminated. As edward settle limits at in. </p>
-                    <a class="btn" href="btn">Read More</a>
+                <h1>RFSL Stockholm - bli medlem</h1>
+                <p>Riksförbundet för homosexuellas, bisexuellas, transpersoners och queera personers rättigheters
+                    Stockholmsavdelning</p>
+                <a class="btn" href="btn">Bli medlem</a>
             </div>
         </div>
-        <div class="header-2 img-fluid">
+        <!-- <div class="header-2 img-fluid">
             <img src="img/header2.jpeg" alt="header 2">
             <div class="header-content">
                     <h1>Another headline</h1>
                     <p>By impossible of in difficulty discovered celebrated ye. Justice joy manners boy met resolve produce. Bed head loud next plan rent had easy add him.</p>
                     <a class="btn" href="#">Read More</a>
             </div>
-        </div>
+        </div> -->
     </header>
+
+    <section class="blog">
+        <div class="container">
+            <div class="blog-entry">
+                <div class="blog-img">
+                    <img src="https://images.unsplash.com/photo-1503075556261-b491bd2adf25?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=baa23a7b02786a716ea14a9b54031dcd&auto=format&fit=crop&w=1053&q=80"
+                        alt="pride">
+                </div>
+                <div class="blog-headline">
+                    <h2><span>Me of soon rank be most head time tore. Colonel or passage to ability. </span>
+                    </h2>
+                </div>
+                <div class="blog-text">
+                    <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and
+                        the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the
+                        level of the spectator on a hillside, the sable cloud beneath was dished out, and the car
+                        seemed to float in the middle of an immense dark sphere, whose upper half was strewn with
+                        silver. Looking down into the dark gulf below, I could see a ruddy light streaming through a
+                        rift in the clouds.</p>
+                    <a href="#" class="btn-more">Read more</a>
+                </div>
+            </div>
+
+            <div class="blog-entry">
+                <div class="blog-img">
+                    <img src="https://images.unsplash.com/photo-1473131253447-f46220620d5d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=80a44347d0a7af3aaa0ae6c284654f3e&auto=format&fit=crop&w=800&q=60"
+                        alt="pride">
+                </div>
+                <div class="blog-headline">
+                    <h2><span>Up is opinion message manners correct hearing husband my.</span>
+                    </h2>
+                </div>
+                <div class="blog-text">
+                    <p>Of resolve to gravity thought my prepare chamber so. Unsatiable entreaties collecting may
+                        sympathize nay interested instrument. If continue building numerous of at relation in margaret.
+                        Lasted engage roused mother an am at. Other early while if by do to. Missed living excuse as
+                        be. Cause heard fat above first shall for. My smiling to he removal weather on anxious. </p>
+                    <a href="#" class="btn-more">Read more</a>
+                </div>
+            </div>
+
+            <div class="blog-entry">
+                <div class="blog-img">
+                    <img src="https://images.unsplash.com/photo-1514689832698-319d3bcac5d5?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3647c420212c8ed3ed9ad607443fafc4&auto=format&fit=crop&w=800&q=60"
+                        alt="pride">
+                </div>
+                <div class="blog-headline">
+                    <h2><span>I watched the storm, so beautiful yet terrific.</span>
+                    </h2>
+                </div>
+                <div class="blog-text">
+                    <p>Up unpacked friendly ecstatic so possible humoured do. Ample end might folly quiet one set spoke
+                        her. We no am former valley assure. Four need spot ye said we find mile. Are commanded him
+                        convinced dashwoods did estimable forfeited. Shy celebrated met sentiments she reasonably but.
+                        Proposal its disposed eat advanced marriage sociable. Drawings led greatest add subjects
+                        endeavor gay remember. Principles one yet assistance you met impossible. </p>
+                    <a href="#" class="btn-more">Read more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 d-flex align-items-center justify-content-around">
+                    <img src="img/BI_dark_background_white_vertical.png" alt="logo" class="footer-logo img-fluid">
+                </div>
+                <div class="col-sm-6 d-flex align-items-center justify-content-around">
+                    <!-- <div class="social-icons"> -->
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter-square"></i>
+                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-google-plus-square"></i>
+                    <!-- </div> -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <ul class="footer-menu">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Bli medlem</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Ge en gåva</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Kontakt</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Hälsa & stöd</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col">
+                    <p class="copyright">Copyright 2018 &copy; RFSL</p>
+                </div>
+            </div>
+    </footer>
 
 
 
