--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RFSL</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300,700" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300,700" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -14,8 +14,6 @@
 
 <body>
     <nav class="navbar navbar-expand-lg sticky-top navbar-light">
-
-        <div class="wrapper-left">
             <a class="navbar-brand" href="#"><img src="img/rfslstockholm-logo.png" alt="logo" class="logo"></a>
 
             <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -95,16 +93,16 @@
                         </div>
                     </li>
                 </ul>
-            </div>
-        </div>
 
+                <div class="right-corner">
+                    <a class="nav-link" href="#"><i class="fas fa-circle"></i>Bli medlem</a>
+                    <a class="nav-link" href="#"><i class="fas fa-circle"></i>Kontakt</a>
+                    <a class="nav-link" href="#"><i class="fas fa-circle"></i>Lättläst</a>
+                    <a class="nav-link" href="#"><i class="fas fa-circle"></i>Språk</a>
+                </div>
 
-            <div class="right-corner">
-                <a class="nav-link" href="#"><i class="fas fa-circle"></i>Bli medlem</a>
-                <a class="nav-link" href="#"><i class="fas fa-circle"></i>Kontakt</a>
-                <a class="nav-link" href="#"><i class="fas fa-circle"></i>Lättläst</a>
-                <a class="nav-link" href="#"><i class="fas fa-circle"></i>Språk</a>
             </div>
+
 
     </nav>
 
@@ -147,7 +145,7 @@
                                     <p class="card-text"> Mauris mauris lacus, vulputate id efficitur sed, porta quis
                                         ligula. Proin laoreet dolor nulla, sit amet vestibulum dui maximus a. Nam sit
                                         amet orci fermentum.</p>
-                                    <a href="#" class="btn btn-primary btn-end mt-auto">Läs mer</a>
+                                    <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
                                 </div>
                             </div>
                         </div>
@@ -163,7 +161,7 @@
                                     <p class="card-text">Donec lobortis tincidunt nunc, a accumsan massa. Maecenas
                                         commodo risus ut pretium gravida. Pellentesque habitant morbi tristique
                                         senectus et netus et malesuada fames ac turpis egestas.</p>
-                                    <a href="#" class="btn btn-primary  mt-auto">Läs mer</a>
+                                    <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +174,7 @@
                                     <p class="card-text">Phasellus eu convallis libero. Suspendisse potenti. Nulla et
                                         convallis turpis. Etiam tristique orci eu urna elementum, eget luctus odio
                                         volutpat.</p>
-                                    <a href="#" class="btn btn-primary btn-end mt-auto">Läs mer</a>
+                                    <a href="#" class="btn btn-primary mt-auto">Läs mer</a>
                                 </div>
                             </div>
                         </div>
@@ -197,7 +195,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="sidebar">
+                    <div class="sidebar mb-4">
                         <h4 class="text-center mb-3">This is sidebar</h4>
                         <p>You can add some content here using widgets in Wordpress.</p>
                         <p> Donec quis orci ut
