--- a/src/index.html
+++ b/src/index.html
@@ -109,8 +109,13 @@
 
     <!-- HEADER -->
     <header class="header">
-        <img src="https://images.unsplash.com/photo-1533551223731-024de510ab2c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f7fc7047cd521d14d64151858cba46bf&auto=format&fit=crop&w=1780&q=80"
+        <!-- <img src="https://images.unsplash.com/photo-1533551223731-024de510ab2c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f7fc7047cd521d14d64151858cba46bf&auto=format&fit=crop&w=1780&q=80"
+            alt="header 1" class="img-fluid"> -->
+
+            <img src="https://media.timeout.com/images/101625043/1372/772/image.jpg"
             alt="header 1" class="img-fluid">
+
+
     </header>
 
 
@@ -223,7 +228,7 @@
                             Ut finibus velit at enim condimentum, nec interdum magna tempus.
                             Nam id ligula a odio lobortis pretium.
                         </p>
-                        <br><br>
+                        <br>
 
                         Telefonnummer: 08- 501 629 50 (Telefontid är onsdagar kl 13-15)
                         Hitta telefonnummer till vår personal på Personal-sidan <br>
@@ -238,7 +243,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col text-center">
                     <ul class="footer-menu">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Bli medlem</a>
