--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="blog-post.html"> Om RFSL Stockholm</a>
-                            <a class="dropdown-item" href="#">Styrdokument</a>
-                            <a class="dropdown-item" href="#">Styrelse</a>
+                            <a class="dropdown-item" href="no-sidebar.html">Styrdokument</a>
+                            <a class="dropdown-item" href="single-page.html">Styrelse</a>
                             <a class="dropdown-item" href="#">Personal</a>
                             <a class="dropdown-item" href="#">Jobba hos oss</a>
                         </div>
@@ -125,11 +125,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-
                     <div class="row blog-row">
-
                         <div class="col-lg-6 d-flex">
-                            <div class="card mb-4">
+                            <div class="card">
                                 <img class="card-img-top" src="img/header1.jpeg" alt="Card image cap">
                                 <div class="card-body d-flex flex-column">
                                     <h5 class="card-title">Blog title</h5>
@@ -142,7 +140,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 d-flex">
-                            <div class="card mb-4">
+                            <div class="card">
                                 <img class="card-img-top" src="img/header2.jpeg" alt="Card image cap">
                                 <div class="card-body d-flex flex-column">
                                     <h5 class="card-title">Another blog title</h5>
@@ -158,7 +156,7 @@
 
                     <div class="row blog-row">
                         <div class="col-lg-6 d-flex">
-                            <div class="card mb-4">
+                            <div class="card">
                                 <img class="card-img-top" src="img/img1.jpg" alt="Card image cap">
                                 <div class="card-body d-flex flex-column">
                                     <h5 class="card-title">Blog title</h5>
@@ -171,7 +169,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 d-flex">
-                            <div class="card mb-4">
+                            <div class="card">
                                 <img class="card-img-top" src="img/img2.jpg" alt="Card image cap">
                                 <div class="card-body d-flex flex-column">
                                     <h5 class="card-title">Blog title</h5>
@@ -200,7 +198,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="sidebar mb-4">
+                    <div class="sidebar">
                         <h4 class="text-center">This is sidebar</h4>
                         <p  class="my-5">You can add some content here using widgets in Wordpress.
                              Donec quis orci ut
@@ -231,7 +229,7 @@
     <!-- FOOTER -->
 
     <footer class="footer">
-        <div class="container">
+        <!-- <div class="container"> -->
             <div class="row">
                 <div class="col-lg-4 d-flex align-items-center">
                     <img src="img/rfslstockholm-logo-white.png" alt="logo" class="footer-logo img-fluid">
@@ -288,7 +286,7 @@
                     <i class="fab fa-linkedin"></i>
                     <i class="fab fa-google-plus-square"></i>
                 </div>
-            </div>
+            <!-- </div> -->
     </footer>
 
 
