--- a/src/index.html
+++ b/src/index.html
@@ -9,102 +9,103 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="fonts/stylesheet.css">
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg sticky-top navbar-light">
-            <a class="navbar-brand" href="index.html"><img src="img/rfslstockholm-logo.png" alt="logo" class="logo"></a>
+        <nav class="navbar navbar-expand-lg sticky-top navbar-light">
+                <a class="navbar-brand" href="index.html"><img src="img/rfslstockholm-logo.png" alt="logo" class="logo"></a>
 
-            <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            Om oss
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="blog-post.html"> Om RFSL Stockholm</a>
-                            <a class="dropdown-item" href="no-sidebar.html">Styrdokument</a>
-                            <a class="dropdown-item" href="single-page.html">Styrelse</a>
-                            <a class="dropdown-item" href="#">Personal</a>
-                            <a class="dropdown-item" href="#">Jobba hos oss</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            Verksamhet/Vi gör
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Mötesplatser</a>
-                            <a class="dropdown-item" href="#">Information/material</a>
-                            <a class="dropdown-item" href="#">Projekt</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            Medlem
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Medlemsgrupper</a>
-                            <a class="dropdown-item" href="#">Fester</a>
-                            <a class="dropdown-item" href="#">Nyhetsbrev</a>
-                            <a class="dropdown-item" href="#">Bli medlem</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            Volontär
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Bli volontär</a>
-                            <a class="dropdown-item" href="#">Volontärutbildning</a>
-                            <a class="dropdown-item" href="#">Volontäruppdrag</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            Utbildning
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Utbildningspaket</a>
-                            <a class="dropdown-item" href="#">Priser</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                            Hälsa
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Migrantkonsulent </a>
-                            <a class="dropdown-item" href="#">Röda paraplyt</a>
-                            <a class="dropdown-item" href="#">Sexperterna</a>
-                            <a class="dropdown-item" href="#">Testpoint</a>
-                        </div>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                Om oss
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="blog-post.html">Blog post</a>
+                                <a class="dropdown-item" href="no-sidebar.html">Index no sidebar</a>
+                                <a class="dropdown-item" href="single-page.html">Single page</a>
+                                <a class="dropdown-item" href="#">Personal</a>
+                                <a class="dropdown-item" href="#">Jobba hos oss</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                Verksamhet/Vi gör
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Mötesplatser</a>
+                                <a class="dropdown-item" href="#">Information/material</a>
+                                <a class="dropdown-item" href="#">Projekt</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                Medlem
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Medlemsgrupper</a>
+                                <a class="dropdown-item" href="#">Fester</a>
+                                <a class="dropdown-item" href="#">Nyhetsbrev</a>
+                                <a class="dropdown-item" href="#">Bli medlem</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                Volontär
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Bli volontär</a>
+                                <a class="dropdown-item" href="#">Volontärutbildning</a>
+                                <a class="dropdown-item" href="#">Volontäruppdrag</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                Utbildning
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Utbildningspaket</a>
+                                <a class="dropdown-item" href="#">Priser</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                Hälsa
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Migrantkonsulent </a>
+                                <a class="dropdown-item" href="#">Röda paraplyt</a>
+                                <a class="dropdown-item" href="#">Sexperterna</a>
+                                <a class="dropdown-item" href="#">Testpoint</a>
+                            </div>
+                        </li>
+                    </ul>
 
-                <div class="right-corner">
-                    <a class="nav-link" href="#"><i class="fas fa-circle"></i>Bli medlem</a>
-                    <a class="nav-link" href="#"><i class="fas fa-circle"></i>Kontakt</a>
-                    <a class="nav-link" href="#"><i class="fas fa-circle"></i>Lättläst</a>
-                    <a class="nav-link" href="#"><i class="fas fa-circle"></i>Språk</a>
+                    <div class="right-corner">
+                        <a class="nav-link" href="#"><i class="fas fa-circle"></i>Bli medlem</a>
+                        <a class="nav-link" href="#"><i class="fas fa-circle"></i>Kontakt</a>
+                        <a class="nav-link" href="#"><i class="fas fa-circle"></i>Lättläst</a>
+                        <a class="nav-link" href="#"><i class="fas fa-circle"></i>Språk</a>
+                    </div>
+
                 </div>
 
-            </div>
 
-
-    </nav>
+        </nav>
 
 
     <!-- HEADER -->
